fix(turbo): 🐛 获取第一个 getFirst 修改